# resume-optimization-system

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY_AUDIT.md  USER_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  setup-docker-test.sh  simulate-distribution.sh
.agent/: FASTAI_ANALYSIS.md  WORKING_PREFERENCES.md
.agent/workflows/: regression_testing.md
data/: classification_report.md  classified_files.json  file_inventory.json
examples/: README.md  sample_profile.json
hooks/: README.md  install.sh  pre-commit
profile-data/: linkedin-profile-parsed.json  linkedin-profile.md
scripts/: 0_setup.py  10_ingest_jds.py  11_clean_jd_text.py  11_match_gaps.py  1_scan_resume_folder.py  2_classify_files.py  2_confirm.py  3_classification_report.py  3_generate_classification_report.py  4_discover_sections.py  4_parse_linkedin_pdf.py  5_create_profile_db.py  5_extract_content.py  6_build_knowledge_base.py  6_generate_markdown_profile.py  7_discover_resume_sections.py  7_ingest_resume_content.py  7_parse_linkedin.py  8_create_profile_db.py  8_extract_resume_content.py  9_build_master_db.py  9_generate_profile_md.py  analyze_specific_files.py  check_misclassified.py  create_profile_db.py  debug_patterns.py  generate_classification_report.py  last_validation.py  lib_demand.py  lib_extract.py  lib_profile.py  lib_profile_steps_5_6.py  lib_validation.py  parse_linkedin_pdf.py  profile_parser_lib.py  setup.py  setup_linkedin_auth.py  validate_data_isolation.py  validate_git_privacy.py  verify_fixes.py
simulate/: README.md
(+17 files in other folders)
